--- a/{{cookiecutter.project_slug}}/pyproject.toml
+++ b/{{cookiecutter.project_slug}}/pyproject.toml
@@ -27,6 +27,14 @@ pep8-naming = "*"
 profile = "black"
 line_length = 120
 
+[tool.autoflake]
+recursive = true
+expand-star-imports = true
+remove-all-unused-imports = true
+ignore-init-module-imports = true
+remove-duplicate-keys = true
+remove-unused-variables = true
+
 [tool.black]
 line-length = 120
 skip-string-normalization = true
