Add option disallow-untyped-defs to mypy config

--- a/{{cookiecutter.project_slug}}/pyproject.toml
+++ b/{{cookiecutter.project_slug}}/pyproject.toml
@@ -38,3 +38,6 @@ remove-unused-variables = true
 [tool.black]
 line-length = 120
 skip-string-normalization = true
+
+[tool.mypy]
+disallow_untyped_defs = true
