--- a/{{cookiecutter.project_slug}}/pyproject.toml
+++ b/{{cookiecutter.project_slug}}/pyproject.toml
@@ -19,6 +19,7 @@ black = "*"
 flake8 = "*"
 flake8-bugbear = "*"
 flake8-comprehensions = "*"
+flake8-quotes = "*"
 isort = "*"
 mypy = "*"
 pep8-naming = "*"
