--- a/.github/workflows/test-pr.yml
+++ b/.github/workflows/test-pr.yml
@@ -20,15 +20,11 @@ jobs:
       - name: 'Install cookiecutter'
         run: pip install cookiecutter
       - name: 'Install Poetry'
-        run: |
-          curl -sSL https://install.python-poetry.org | python3 -
-          poetry --version
+        run: curl -sSL https://install.python-poetry.org | python3 - --version 1.3.2
       - name: 'Generate template'
         run: cookiecutter --no-input . project_name='Test Project'
       - name: 'Generate lock file'
-        run: |
-          cd ./test-project
-          poetry lock
+        run: poetry -C ./test-project lock
       - name: 'Cache generated project'
         uses: actions/cache@v3
         with:
@@ -48,9 +44,7 @@ jobs:
         with:
           python-version: ${{ matrix.python-version }}
       - name: 'Install Poetry'
-        run: |
-          curl -sSL https://install.python-poetry.org | python3 -
-          poetry --version
+        run: curl -sSL https://install.python-poetry.org | python3 - --version 1.3.2
       - name: 'Restore generated project'
         uses: actions/cache@v3
         with:
