--- a/.github/workflows/test-pr.yml
+++ b/.github/workflows/test-pr.yml
@@ -16,7 +16,7 @@ jobs:
       - name: 'Install Python'
         uses: actions/setup-python@v4
         with:
-          python-version: '3.8'
+          python-version: '3.10'
       - name: 'Install cookiecutter'
         run: pip install cookiecutter
       - name: 'Install Poetry'
@@ -37,7 +37,7 @@ jobs:
     runs-on: ubuntu-latest
     strategy:
       matrix:
-        python-version: ['3.8', '3.10']
+        python-version: ['3.10', '3.11']
     steps:
       - name: 'Install Python'
         uses: actions/setup-python@v4
@@ -52,6 +52,8 @@ jobs:
           key: test-project-${{ github.run_id }}
       - name: 'Run tests'
         run: make -C test-project all
+      - name: 'Run pyupgrade'
+        run: make -C test-project pyupgrade
 
   nix-build:
     name: 'Build with Nix'
