Build, package, publish

--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -60,6 +60,7 @@ jobs:
       
       - name: 'Build, Package, Publish'
         run: |
+          cd ./test-project
           poetry build
-          poetry test
+          poetry publish
         
