Add publish step

--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -68,4 +68,5 @@ jobs:
           cd ./test-project
           poetry build
 
-          
+      - name: Publish package distributions to PyPI
+        uses: pypa/gh-action-pypi-publish@release/v1
