--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -25,7 +25,7 @@ jobs:
         run: curl -sSL https://install.python-poetry.org | python3 - --version 1.3.2
 
       - name: 'Generate template'
-        run: cookiecutter --no-input . project_name='Test Project'
+        run: cookiecutter --no-input . project_name='Test Project' description='Test Description' author='Test Author' version='0.0.1'
 
       - name: 'Generate lock file'
         run: poetry -C ./test-project lock
