--- a/.github/workflows/test-pr.yml
+++ b/.github/workflows/test-pr.yml
@@ -14,19 +14,19 @@ jobs:
       - name: 'Check out code'
         uses: actions/checkout@v3
       - name: 'Install Python'
-        uses: actions/setup-python@v4
+        uses: actions/setup-python@v5
         with:
           python-version: '3.10'
+      - name: 'Install uv'
+        uses: astral-sh/setup-uv@v5
       - name: 'Install cookiecutter'
         run: pip install cookiecutter
-      - name: 'Install Poetry'
-        run: curl -sSL https://install.python-poetry.org | python3 - --version 1.3.2
       - name: 'Generate template'
         run: cookiecutter --no-input . project_name='Test Project'
       - name: 'Generate lock file'
-        run: poetry -C ./test-project lock
+        run: uv --project ./test-project lock
       - name: 'Cache generated project'
-        uses: actions/cache@v3
+        uses: actions/cache@v4
         with:
           path: ./test-project
           key: test-project-${{ github.run_id }}
@@ -37,16 +37,16 @@ jobs:
     runs-on: ubuntu-latest
     strategy:
       matrix:
-        python-version: ['3.10', '3.11']
+        python-version: ['3.10', '3.11', '3.12', '3.13']
     steps:
       - name: 'Install Python'
-        uses: actions/setup-python@v4
+        uses: actions/setup-python@v5
         with:
           python-version: ${{ matrix.python-version }}
-      - name: 'Install Poetry'
-        run: curl -sSL https://install.python-poetry.org | python3 - --version 1.3.2
+      - name: 'Install uv'
+        uses: astral-sh/setup-uv@v5
       - name: 'Restore generated project'
-        uses: actions/cache@v3
+        uses: actions/cache@v4
         with:
           path: ./test-project
           key: test-project-${{ github.run_id }}
