--- a/{{cookiecutter.project_slug}}/pyproject.toml
+++ b/{{cookiecutter.project_slug}}/pyproject.toml
@@ -14,6 +14,9 @@ dependencies = []
 name = "{{ cookiecutter.author_name }}"
 email = "{{ cookiecutter.author_email }}"
 
+[project.scripts]
+{{ cookiecutter.project_slug }} = "{{ cookiecutter.project_slug }}.__main__:main"
+
 [dependency-groups]
 dev = [
     "autoflake",
